Updates AML risk level check to use repository